tests/baselines/reference/typeArgumentsOnFunctionsWithNoTypeParameters.errors.txt
==== tests/cases/compiler/typeArgumentsOnFunctionsWithNoTypeParameters.ts (4 errors) ====
    function foo<T, U>(f: (v: T) => U) {
       var r1 = f<number>(1);
                ~~~~~~~~~~~~
!!! typeArgumentsOnFunctionsWithNoTypeParameters.ts(2,13): error TS2087: Could not select overload for 'call' expression.
       var r2 = f(1);
                ~
!!! typeArgumentsOnFunctionsWithNoTypeParameters.ts(3,13): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'T' to argument 1 which is of type 'number'.
                ~
!!! typeArgumentsOnFunctionsWithNoTypeParameters.ts(3,13): error TS2087: Could not select overload for 'call' expression.
       var r3 = f<any>(null);
                ~~~~~~~~~~~~
!!! typeArgumentsOnFunctionsWithNoTypeParameters.ts(4,13): error TS2087: Could not select overload for 'call' expression.
       var r4 = f(null);
    }
    